--- a/static/style.css
+++ b/static/style.css
@@ -374,18 +374,14 @@ body.unlocked #login { display: none; }
 }
 /* Bottom panel */
 
+
+#logwin,
 #datawin {
-    position: absolute;
-    left: 0;
-    bottom: 0;
+    position: relative;
     width: 100%;
-    height: 230px;
-    background: white;
-    z-index: 200;
-    display: flex;
-    flex-direction: column; /* column so title on top, table scrolls below */
-    border-top: 1px solid #ccc;
+    height: 100%;
 }
+
 
 .stay-on-top {
   z-index: 999999 !important;
@@ -538,16 +534,21 @@ input:checked + .slider:before {
     border-top: 1px solid #ccc;
 }
 
+
 #lower-main {
-    flex: 1 1 0;      /* SAME AS main-content */
-    min-width: 0;
+    display: flex;
+    flex: 1 1 0;
+    flex-direction: column;
     overflow: hidden;
 }
 
 #lower-sidebar {
+    display: flex;
     flex: 0 0 360px;  /* SAME AS sidebar */
-    overflow: auto;
+    flex-direction: column;
+    overflow: hidden;
 }
+
 
 
 #calendar {
@@ -792,6 +793,7 @@ input:checked + .slider:before {
 .table-container {
     width: 100%;
     height: 100%;
+    flex: 1 1 auto;
     overflow: auto;          /* scroll here */
 }
 
@@ -802,6 +804,11 @@ input:checked + .slider:before {
     border-collapse: collapse;
 }
 
+#datawin {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
 
 #captains-table th,
 #captains-table td {
