--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -220,6 +220,12 @@
         Type of Election: <select class="righted"name="territories" id="territories"></select><br>
       </li>
       <li class="righted">
+        Admin Mode: <select class="righted"name="adminmode" id="adminmode"></select><br>
+      </li>
+      <li class="righted">
+        Territory: <select class="righted"name="territory" id="territory"></select><br>
+      </li>
+      <li class="righted">
       Party selected: <select class="righted" name="yourparty" id="yourparty"></select><br>
       </li>
       <li class="righted">
@@ -277,7 +283,7 @@
 </div>
         <div class = "grid-container">
           <div class="grid-item">
-          <button type="button" id="b0" class="small_btn">SPARE<br>SPARE</button>
+          <button type="button" id="b0" class="small_btn">SET ELECTION<br>TERRITORY</button>
           </div>
             <div class="grid-item">
               <button type = "button" id = "b1" class = "small_btn" onclick="setActionForm('filelist',filelist='maps')">Boundary<br>Maps</button>
