--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -220,7 +220,7 @@
         Type of Election: <select class="righted"name="territories" id="territories"></select><br>
       </li>
       <li class="righted">
-        Admin Mode: <select class="righted"name="adminmode" id="adminmode"></select><br>
+        Admin Mode: <input type="checkbox" class="righted" name="adminmode" id="adminmode"><br>
       </li>
       <li class="righted">
         Territory: <select class="righted"name="territory" id="territory"></select><br>
