--- a/templates/resourcing.html
+++ b/templates/resourcing.html
@@ -246,6 +246,7 @@ function populateDropdowns() {
   fillSelect("resourcesSelect", window.resources);
   fillSelect("placeSelect", window.places);
   fillSelect("areaSelect", window.areas);
+  fillSelect("territory", window.territory);
 }
 
 
