--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -241,7 +241,7 @@
         <div class="toggle-container">
           <span class="toggle-label">Accumulate: </span>
           <label class="switch">
-            <input type="checkbox" id="accumulate" name="accumulate" onchange="handleToggle(this)">
+            <input type="checkbox" id="accumulate" name="accumulate" onchange="accumulateToggle(this)">
             <span class="slider"></span>
           </label>
         </div>
